[package]
name = "bevy-building-blocks"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[dependencies]
# bevy = "0.3"
bevy = { branch = "master", git = "https://github.com/bevyengine/bevy" }
fnv = "1.0"
thread_local = "1.0"

[dependencies.building-blocks]
git = "https://github.com/bonsairobo/building-blocks"
branch = "main"
# version = "0.2.1"
features = []
