[package]
name = "bevy-building-blocks"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[features]
ncollide = ["building-blocks/ncollide"]

[dependencies]
fnv = "1.0"
thread_local = "1.0"

[dependencies.bevy]
# version = "0.3"
# path = "../bevy"
git = "https://github.com/bevyengine/bevy"
# branch = "master"
rev = "51650f114fbf31fc89db7bd69542dc21edf2dcb7"

[dependencies.building-blocks]
git = "https://github.com/bonsairobo/building-blocks"
branch = "main"
# path = "../building-blocks"
# version = "0.2.1"
default-features = false
features = ["lz4", "ncollide"]

[profile.release]
lto = true
